# temperature-scoring

./: .gitignore  README.md  df.csv  mismatch.csv  pyproject.toml  requirements.txt
data/clean/: company_data.csv  emission_data.csv  emission_targets_amended.csv  emission_targets_amended_and_split.csv  emissions_targets.csv  input_data.xlsx  input_data_example.xlsx  input_data_with_estimates.xlsx  output_data.xlsx  output_data_example.xlsx  output_data_with_estimates.xlsx  portfolio_scores_Average.csv  portfolio_scores_WATS.csv  portfolio_scores_example_Average.csv  portfolio_scores_example_WATS.csv  portfolio_scores_with_estimates_AOTS.csv  portfolio_scores_with_estimates_Average.csv  portfolio_scores_with_estimates_Emissions.csv  portfolio_scores_with_estimates_Market Cap.csv  portfolio_scores_with_estimates_ROTS.csv  portfolio_scores_with_estimates_Revenue.csv  reduction_targets.csv  relative_emissions_targets.csv
plots/: temperature_scores.csv  temperature_scores_example.csv  temperature_scores_with_estimates.csv
scripts/: calculate_scores.py  clean_data.py  clean_emission_data.py  generate_scores.py  plot_scores.py  process_targets.py
src/temperature_scoring/: config.py
